added all basic jsx, started sorting algos

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link href="index.css" type="text/css" rel="stylesheet"/>
+        <script src="bundle.js"></script>
     </head>
     <body>
-        
+        <div id="main">
+            React goes here!
+        </div>
     </body>
 </html>
