added title and favicon

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
         <link href="index.css" type="text/css" rel="stylesheet"/>
-        <script src="bundle.js"></script>
+        <title>Algo Visualizer</title>
+        <link rel="icon" href="./images/favicon.png"/>
     </head>
     <body>
         <div id="main">
             React goes here!
         </div>
+        <script src="bundle.js"></script>
     </body>
 </html>
